# resonatify

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  BRANDING.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
docs/: app-plan-details.md  architecture-design.md  competitive-analysis.md  plan-new-app.md  ui-redesign-plan.md  ui-ux-inspiration.md  user-journey-maps.md  user-personas.md  wireframes.md
scripts/: make_transparent.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_core_tables.sql  002_add_last_run_at.sql
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/audio/: error.rs  mod.rs  player.rs  service.rs  validator.rs
src-tauri/src/commands/: audio.rs  dialogs.rs  mod.rs  scheduler.rs  schedules.rs  settings.rs
src-tauri/src/db/: mod.rs  models.rs  playback_history.rs  schedules.rs  settings.rs
src-tauri/src/scheduler/: engine.rs  error.rs  mod.rs  time_calculator.rs
src-tauri/tests/: scheduler_integration.rs
src/components/: ScheduleCard.tsx  ScheduleHeader.tsx  ScheduleList.tsx  ScheduleModal.tsx
src/components/__tests__/: ScheduleCard.test.tsx
src/components/settings/: SettingsLayout.tsx  SettingsPanel.tsx  ThemeIndicator.tsx
src/components/ui/: button.tsx  dialog.tsx  index.ts  select.tsx  switch.tsx
src/hooks/: useScheduleShortcuts.ts  useThemeSync.ts
src/stores/: scheduleStore.ts  settingsStore.ts
src/stores/__tests__/: settingsStore.test.ts
src/types/: repeat.ts  schedule.ts  settings.ts
src/utils/: cn.ts  openLink.ts
src/utils/__tests__/: cn.test.ts  noop.test.ts
tests/e2e/: schedule.spec.ts  settings.spec.ts
