[package]
name = "resonator"
version = "0.1.0"
description = "A cross-platform audio scheduling application"
authors = ["flup"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resonator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time handling
chrono = "0.4"

# Audio playback
rodio = "0.19"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Tauri plugins (to be added when needed in Phase 4)
# tauri-plugin-autostart = "2"
# tauri-plugin-notification = "2"

