[package]
name = "resonatify"
version = "0.1.0"
description = "A cross-platform audio scheduling application"
authors = ["flup"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resonatify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Audio playback
rodio = { version = "0.21", features = ["symphonia", "symphonia-aac", "symphonia-isomp4"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "sqlite", "chrono", "uuid"] }

# Identifiers
uuid = { version = "1", features = ["serde", "v4"] }

# Error handling
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
hound = "3"
tempfile = "3"

# Tauri plugins (to be added when needed in Phase 4)
# tauri-plugin-autostart = "2"
# tauri-plugin-notification = "2"

